# agent-session-manager

./: Cargo.toml  README.md
docs/: claude-code-session-rules.md  codex-session-rules.md  library-evaluation.md  output-schema.md  pi-coding-agent-session-rules.md  remove-session.md  tui-application-plan.md
src/: lib.rs  main.rs
src/application/: ports.rs  services.rs
src/domain/: mod.rs
src/inbound/: cli.rs
src/outbound/: filesystem.rs
tests/: cli.rs
