[package]
name = "agent-session-manager"
version = "0.1.0"
edition = "2024"
description = "A Rust CLI application scaffold for managing agent sessions."
license = "MIT"

[lib]
name = "agent_sessions"
path = "src/lib.rs"

[[bin]]
name = "agent-sessions"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
